k8s/apps/flux-system/addons/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: ${SECRET_DOMAIN}
    hajimari.io/enable: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: flux-webhook.${SECRET_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /hook/
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
    - hosts:
        - flux-webhook.${SECRET_DOMAIN}
      secretName: ${SECRET_DOMAIN}-tls
